syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos.common";
option java_outer_classname = "TableIndexInfoProto";
option java_multiple_files = true;

// Stores Index information in parent table store
message TableIndexInfo {
  required string database_id = 1;
  required string index_id = 2;
  required bool isMV = 3;
}