syntax = "proto2";

option java_package = "io.polycat.catalog.store.protos.common";
option java_outer_classname = "TableIndexPartitionSetInfoProto";
option java_multiple_files = true;

message TableIndexPartitionSetInfo {
  required string cur_set_id = 1;   //标识当前使用的DataPartitionSet ID
  repeated string set_ids = 2;
}